Add the source of the given definition

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-Для работы данной утилиты необходимо иметь словарь в следующем формате. Каждая строка (в кодировке utf-8) представляет собой отдельное определение. Заголовочное слово отделяется от статьи символами " - ": пробел, дефис, пробел (без кавычек). Для примера см. файл dict.txt
+Для работы данной утилиты необходимо иметь словарь в следующем формате. Каждая строка (в кодировке utf-8) представляет собой отдельное определение. Заголовочное слово отделяется от статьи символами " - ": пробел, дефис, пробел (без кавычек). Для примера см. файл dict.txt. Все определения в этом файле взяты из электронной версии Малого академического словаря (МАС):
+Малый академический словарь: В 4-х т. / РАН, Ин-т лингвистич. исследований; Под ред. А.П. Евгеньевой. – 4-е изд., стер. – М.: Рус. яз.; Полиграфресурсы, 1999.
 
 Словарь необходимо обогатить грамматической информацией с помощью программного средства mystem. Для его запуска необходимо использовать три следующих ключа (данная информация взята из Помощи к mystem версии 3.0):
 -d   Apply disambiguation
